--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -30,8 +30,20 @@ body {
     font-weight: 700;
     color:white;
     font-family: 'Cinzel', serif;
+    text-shadow: 2px 2px 3px black; 
 }
 
+
+.text-vertical-center h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 1.5em;
+    font-weight: 700;
+    color:white;
+    font-family: 'Cinzel', serif;
+    text-shadow: 2px 2px 3px black; 
+  
+}
 /* Custom Button Styles */
 
 .btn-dark {
@@ -187,12 +199,13 @@ hr.small {
     display: table;
     width: 100%;
     height: 400px;
-    color: #fff;
-    background: url(../img/callout.jpg) no-repeat center center scroll;
+    color: #777;
+    background: url(../img/graphpaper.png) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    text-shadow: 3px 3px 4px #3aa6d0;
 }
 
 /* Portfolio */
@@ -354,3 +367,75 @@ overflow: hidden;
 
 @keyframes snowfall{to{transform:none}}@keyframes snowfallZ{to{transform:translateZ(150px)}}@keyframes snowfallX{to{transform:translateZ(250px)}}@keyframes snowfallY{to{transform:translateZ(-150px)}}@media (max-width: 1500px){#mtnRing{position:absolute;bottom:0;width:800px;height:520px;background-size:cover;left:-60px;right:0;margin:auto}}
 @keyframes sway{25%{transform:translate(50px, 0)}50%{transform:translate(-50px, 0)}75%{transform:translate(25px, 0)}100%{transform:translate(-50px, 0)}}
+
+
+@import "compass/css3";
+
+/*body {
+ font-family: Georgia,"Times New Roman",Times,serif; 
+  color: white;
+  width: 50%;
+  margin: 0 auto;
+}
+
+section, div {
+  box-sizing: border-box;
+}
+
+section {
+  width: 100%;
+  padding: 1em;
+  background-color: #333333;
+  box-sizing: border-box;
+}*/
+
+.arrow {
+  position: relative;
+  width: 100%;
+  border: 5px solid #666;
+  border-radius: 2px;
+  height: 2em;
+}
+
+.arrow-status {
+  text-align: right;
+  padding-right: .5em;
+  background-color: #3aa6d0;
+  border-color: white;
+  border-right: .5em solid adjust-lightness(#3aa6d0, 20);
+  width: 0%;
+  color: white;
+  height: 100%;
+  line-height: 1.2em;
+  -webkit-animation: width 1s ease-in;
+}
+
+.arrow-pointer2 {
+  background-color: white;
+  display: inline-block;
+  width: 1em;
+  height: 3em;
+  position: relative;
+  left: 100%;
+  top: -1em;
+  margin-left: -2em;
+  margin-bottom: -2em;
+  border-radius: 0 5px 5px 0;
+}
+
+.complete {
+  width: 100%;
+  border-radius: 0px;
+}
+
+.pro {
+  width: 75%;
+}
+
+.noob {
+  width: 25%;
+}
+
+@-webkit-keyframes width {
+    from { width: 0%; }
+}
